src/styles/parallax.css
html {
  margin: auto;
}

body {
  height: 100vh;
  width: 120vw;
  overflow: hidden;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  background-color: #58dcd4;
  position: relative;
}

span {
  position: absolute;
  height: 80%;
  min-width: 200vw;
}

div {
  height: 120%;
  width: 300%;
  background-position: center;
  background-size: contain;
  position: absolute;
  background-repeat: repeat;
}

#layer-11 {
  background-image: url("../assets/img/11_background.png");
  outline: 20px solid #58dcd4;
}

#layer-10 {
  background-image: url("../assets/img/10_distant_clouds.png");
}

#layer-9 {
  background-image: url("../assets/img/09_distant_clouds1.png");
}

#layer-8 {
  background-image: url("../assets/img/08_clouds.png");
}

#layer-7 {
  background-image: url("../assets/img/07_huge_clouds.png");
}

#layer-6 {
  background-image: url("../assets/img/06_hill2.png");
}

#layer-5 {
  background-image: url("../assets/img/05_hill1.png");
}

#layer-4 {
  background-image: url("../assets/img/04_bushes.png");
}

#layer-3 {
  background-image: url("../assets/img/03_distant_trees.png");
}

#layer-2 {
  background-image: url("../assets/img/02_trees and bushes.png");
  /* transform: translateX(30px) translateY(-100px); */
}

#layer-1 {
  background-image: url("../assets/img/01_ground.png");
}

